--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -49,10 +49,10 @@
             android:id="@+id/ranking_content"
             layout="@layout/ranking_content"
             android:layout_width="match_parent"
-            android:layout_marginTop="12dp"
             android:layout_height="match_parent"
             android:layout_below="@id/ranking_app_bar"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="12dp" />
 
 
         <ImageView
