--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,24 @@
     android:background="@color/primary_color"
     tools:context=".presentation.ui.MainActivity">
 
+    <TextView
+        android:visibility="gone"
+        android:id="@+id/main_activity_network_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/assent_color"
+        android:fontFamily="@font/roboto"
+        android:padding="4dp"
+        android:text="No Internet, you are offline"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="14sp" />
+
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-       />
+        android:layout_below="@id/main_activity_network_text" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_bottom"
