--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,6 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/primary_color"
     tools:context=".presentation.ui.SplashScreenActivity">
 
+    <ImageView
+        android:id="@+id/splash_app_photo"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="200dp"
+        android:src="@drawable/app_icon" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/splash_app_photo"
+        android:layout_marginTop="40dp"
+        android:fontFamily="@font/amarante"
+        android:text="@string/app_name"
+        android:textAlignment="center"
+        android:textColor="@color/assent_color"
+        android:textSize="54sp"
+        android:textStyle="bold" />
 </RelativeLayout>
